# AlfaBankHackathon

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  STYLEGUIDE.md  loaddata.py  pyproject.toml  requirements.txt
.github/workflows/: .pre-commit-pr.yaml  deploy.yaml  main.yaml
.github/workflows /: pre-commit.yaml
alembic/: env.py
alembic/versions/: 001_first_migration.py  002_add_relationship_pdp_task.py  003_add_template_table.py  004_remove_remplate_dates.py  005_add_skills_table.py  006_rename_name_to_value.py  007_make_deadline_nullable.py
app/: main.py
app/api/: email.py  permissions.py  routers.py  validators.py
app/api/endpoints/: employees_router.py  idp_router.py
app/api/v1/: routers.py
app/api/v1/endpoints/: __init__.py  employee.py  pdp.py  task.py  task_properties.py  template.py  template_properties.py
app/auth/: crud.py  manager.py  routers.py  schemas.py
app/core/: base.py  config.py  constants.py  database_filling.py  db.py  exceptions.py  loaddata.py  user.py
app/crud/: __init__.py  base.py  crud.py  direction.py  grade.py  mixin.py  pdp.py  skill.py  status.py  task.py  template.py  type.py  user.py
app/models/: __init__.py  base.py  database.sqlite3  direction.py  grade.py  pdp.py  pdps.py  skill.py  status.py  statuses.py  task.py  tasks.py  template.py  type.py  types.py  user.py  users.py
app/schemas/: __init__.py  pdp.py  pdps.py  status.py  statuse.py  statuses.py  task.py  task_properties.py  tasks.py  template.py  template_properties.py  type.py  types.py  user.py
app/services/: __init__.py  email.py  template.py
app/tests/: alembic.ini  conftest.py
data/: pdp.csv  status.csv  task.csv  type.csv  user.csv  user_user.csv
infra/: docker-compose-dev.yaml  docker-compose-prod.yaml
infra/nginx/: nginx.conf
nginx/: nginx.conf
tests/: conftest.py  constants.py  services.py  test_directions.py  test_grades.py  test_pdps.py  test_skills.py  test_status.py  test_tasks.py  test_types.py  test_users.py
