[tool.poetry]
name = "alfa-bank-hackathon"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.26.0"
alembic = "^1.13.1"
SQLAlchemy = "^2.0.25"
pydantic-settings = "^2.1.0"
pre-commit = "^3.6.0"
fastapi-users = {extras = ["sqlalchemy"], version = "^12.1.2"}
fastapi-users-db-sqlalchemy = "^6.0.1"

[tool.poetry.group.dev.dependencies]
fastapi = "^0.109.0"
uvicorn = "^0.26.0"
alembic = "^1.13.1"
SQLAlchemy = "^2.0.25"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
