[tool.poetry]
name = "alfa-bank-hackathon"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.26.0"
alembic = "^1.13.1"
SQLAlchemy = "^2.0.25"
pydantic-settings = "^2.1.0"
pre-commit = "^3.6.0"
asyncpg = "^0.29.0"
greenlet = "^3.0.3"
python-jose = "^3.3.0"
passlib = "^1.7.4"
pydantic = {extras = ["email"], version = "^2.5.3"}
fastapi-users = {extras = ["sqlalchemy"], version = "^12.1.2"}

[tool.poetry.group.dev.dependencies]
fastapi = "^0.109.0"
uvicorn = "^0.26.0"
alembic = "^1.13.1"
SQLAlchemy = "^2.0.25"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
